BASW-269: Fix vertical alignment of search icon in multiple select2

--- a/scss/jquery/overrides/_select2.scss
+++ b/scss/jquery/overrides/_select2.scss
@@ -64,6 +64,7 @@
       &::before {
         content: $fa-var-search;
         right: 0;
+        top: 0;
       }
     }
   }
